# fnum

./: Cargo.toml  README.md
src/: lib.rs
test/: speed_test.py  test_fnum.py
